<resources>
    <string name="app_name">Bullseye</string>
    <string name="instruction">Place the bullseye as close as you can to</string>
    <string name="min_value">1</string>
    <string name="max_value">100</string>
    <string name="hit_me_button_text">HIT ME</string>
    <string name="result_dialog_title">Hello there!</string>
    <string name="result_dialog_message">The slider\'s value is %1$d. \nYou scored %2$d points this round</string>
    <string name="result_dialog_button_text">Awesome!</string>
    <string name="info">Info</string>
    <string name="start_over">Start Over</string>
    <string name="score_label">Score</string>
    <string name="current_round_label">Round</string>
    <string name="alert_title_1">Perfect!</string>
    <string name="alert_title_2">You almost had it!</string>
    <string name="alert_title_3">Not bad.</string>
    <string name="alert_title_4">Are you even trying?</string>
    <string name="about_title_text">🎉 Bullseye 🎉\'</string>
    <string name="about_bullseye_text">This is Bullseye, the game where you can win points and earn fame by dragging a slider.\nYour goal is to place the slider as close as possible to the target value. The closer you are, the more points you score.\nEnjoy!</string>
    <string name="back_button_text">Go Back!</string>
    <string name="about_page_title">About Bullseye</string>
</resources>